--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
         />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>Reward Store</title>
+        <title>Rewards Store</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
